plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.0.0-beta12'
}

group = 'com.icarus'
version = '1.0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 21
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'net.portswigger.burp.extensions:montoya-api:2025.6'
}

shadowJar {
    archiveBaseName = 'icarus'
    archiveClassifier = ''
    archiveVersion = project.version
}

tasks.named('build') {
    dependsOn shadowJar
}
